# Payroll-Software

./: .env.example  .gitignore  Makefile  README.md  compose.yaml  conftest.py  manage.py  pyproject.toml
apps/accounts/: admin.py  context.py  forms.py  middleware.py  models.py  urls.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: test_auth.py  test_models.py
apps/audit/: admin.py  apps.py  models.py  recorders.py  signals.py
apps/audit/migrations/: 0001_initial.py
apps/audit/tests/: test_recorders.py
apps/compensation/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/compensation/migrations/: 0001_initial.py
apps/compensation/templates/compensation/: _table.html  form.html  list.html
apps/employees/: admin.py  apps.py  csv_import.py  forms.py  models.py  urls.py  views.py
apps/employees/migrations/: 0001_initial.py  0002_employee_user.py
apps/employees/templates/employees/: confirm_delete.html  detail.html  form.html  import.html  list.html
apps/employees/tests/: test_expiry_panel.py  test_models.py  test_portal_account.py  test_views.py
apps/payroll/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/payroll/migrations/: 0001_initial.py  0002_rls.py
apps/payroll/templates/payroll/: my_payslips.html  payslip_detail.html  payslip_list.html  period_detail.html  period_form.html  period_list.html  period_payslips_print.html  run_payroll.html
apps/payroll/tests/: test_self_service.py
apps/tenants/: admin.py  context.py  managers.py  middleware.py  models.py  models_base.py
apps/tenants/management/commands/: bootstrap_rls_role.py  seed_demo.py
apps/tenants/migrations/: 0001_initial.py
apps/tenants/tests/: test_context.py  test_middleware.py  test_rls.py
config/: urls.py  views.py
config/settings/: base.py  dev.py  prod.py  test.py
docs/: SCOPE.md
domain/: __init__.py  money.py
domain/tests/: test_money.py
services/encryption/: __init__.py  fernet.py  fields.py
services/encryption/tests/: test_fields.py
services/observability/: logging_filters.py
services/payroll/: calculator.py
services/payroll/tests/: test_calculator.py
services/tests/: test_logging_filters.py
templates/: base.html  home.html
templates/_partials/: messages.html  sidebar.html  topnav.html
templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt
tests/ci_guards/: test_logger_keys.py  test_tenant_bypass.py
